<resources>
    <string name="app_name">Weather app</string>
    <string name="current_details">Current details</string>
    <string name="wind">Wind</string>
    <string name="sunrise_amp_sunset"><![CDATA[Sunrise & Sunset]]></string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="length_of_day">Length of day</string>
    <string name="remaining_day_light">Remaining day light</string>
    <string name="max_min_temperature">Max %1$d° | Min %2$d°</string>
    <string name="pressure">Pressure: %d mBar</string>
    <string name="humidity">Humidity: %d</string>
    <string name="visibility">Visibility: %d km</string>
    <string name="wind_km_h">%d km/h</string>
    <string name="temperature">%d°</string>
</resources>